[tool.poetry]
name = "hw11"
version = "0.1.0"
description = ""
authors = ["F1r3n25 <dimalikegtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
fastapi = "^0.104.1"
pydantic = {extras = ["email"], version = "^2.5.2"}
psycopg2 = "^2.9.9"
uvicorn = "^0.24.0.post1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
mapped = "^20.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
